--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.7",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-on-screen": "^2.1.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^11.0.3",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
