--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.3",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
